# boom-tetris

./: .cursorrules  main.py  makefile  pyproject.toml
src/boom_tetris/: __init__.py  board.py  constants.py  game.py  renderer.py
src/boom_tetris/config/: config.py  config_manager.py  config_model.py  config_model_runtime.py  config_model_source.py  model.py
src/boom_tetris/configs/: config_runtime.yaml  config_source.yaml  controls.py  main_config.yaml  main_config_augmented.yaml  triomino_properties.json
src/boom_tetris/polyomino/: polyomino.py  polyomino_generator.py  polyomino_transformer.py
src/boom_tetris/utils/: dict_utils.py  game_utils.py  screen_utils.py  utils_dict.py  utils_game.py  utils_other.py
