[project]
name = "Boom-Tetris"
version = "0.1.0"
description = "Boom! Tetris!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.5",
    "pygame>=2.6.1",
    "ruamel-yaml>=0.18.11",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
    "ty>=0.0.29",
]

[tool.ruff.lint]
select = [
    "I",    # isort-style import sorting
    #"ANN",  # annotation rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]